# chesstty

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DEBUG_LOGGING.md  GAMEPLAY.md  README.md  RUNNING.md  STOCKFISH_SETUP.md  TESTING.md  cliff.toml  dist-workspace.toml  justfile  mise.toml  release.toml
.beads/: issues.jsonl  metadata.json
.github/workflows/: ci-lint.yml  ci-test.yml
analysis/: Cargo.toml  README.md
analysis/src/: lib.rs  review_types.rs
analysis/src/advanced/: critical.rs  mod.rs  psychological.rs  types.rs
analysis/src/board_analysis/: attack_map.rs  back_rank_detector.rs  detector.rs  discovered_attack_detector.rs  fork_detector.rs  hanging_detector.rs  helpers.rs  king_safety.rs  mate_threat_detector.rs  mod.rs  pin_detector.rs  reducer.rs  sacrifice_detector.rs  skewer_detector.rs  tactical_types.rs  tactics.rs  tension.rs  zwischenzug_detector.rs
chess/: Cargo.toml  README.md
chess-client/: Cargo.toml  README.md
chess-client/src/: client.rs  error.rs  lib.rs  mock.rs  traits.rs
chess-common/: Cargo.toml
chess-common/src/: lib.rs  uci.rs
chess/src/: analysis.rs  board_display.rs  converters.rs  fen.rs  game.rs  lib.rs  types.rs  uci.rs
chess/src/pgn/: parser.rs  san.rs  writer.rs
chesstty/: Cargo.toml  README.md
chesstty/src/: config.rs  daemon.rs  main.rs  process.rs  wait.rs
client-tui/: Cargo.toml  README.md
client-tui/src/: client.rs  converters.rs  lib.rs  main.rs  prelude.rs  review_state.rs  session_file.rs  state.rs  state.rs.backup  timer.rs
client-tui/src/app/: fen_history.rs  input_buffer.rs  state.rs
client-tui/src/ui/: app.rs  app_new.rs  context.rs  full_ui.rs  input.rs  menu_app.rs  mod.rs  pane.rs  render_loop.rs  render_loop_backup.rs  simple_ui.rs  theme.rs  widgets_adapter.rs
client-tui/src/ui/fsm/: component.rs  component_manager.rs  hooks.rs  mod.rs  render_spec.rs  renderer.rs
client-tui/src/ui/fsm/states/: game_board.rs  game_board_pane_focused.rs  match_summary.rs  mod.rs  review_board.rs  review_board_pane_focused.rs  start_screen.rs
client-tui/src/ui/widgets/: advanced_analysis_panel.rs  board.rs  board_overlay.rs  controls_panel.rs  engine_panel.rs  fen_dialog.rs  game_info_panel.rs  menu.rs  mini_board.rs  mod.rs  move_analysis_panel.rs  move_history_panel.rs  popup_menu.rs  promotion_dialog.rs  review_helpers.rs  review_summary_panel.rs  review_tabs_panel.rs  selectable_table.rs  snapshot_dialog.rs  tab_input.rs  uci_debug_panel.rs
client-tui/src/util/: mod.rs
client-tui/tests/: fsm_tests.rs  panel_selection_integration_tests.rs  tab_bug_minimal_test.rs  tab_handle_key_test.rs  tab_selection_bug_documentation_test.rs  tab_selection_bug_real_test.rs  tab_selection_bug_test.rs  tab_selection_integration_tests.rs
engine/: Cargo.toml  README.md
engine/src/: lib.rs  stockfish.rs
engine/src/uci/: mod.rs  parser.rs
proto/: Cargo.toml  README.md  build.rs
proto/proto/: advanced_review.proto  chess.proto  chess_service.proto  common.proto  engine.proto  events.proto  game.proto  persistence.proto  positions.proto  review.proto  session.proto
proto/src/: lib.rs
scripts/: install-stockfish.sh  tag-release.sh
server/: CONFIGURATION.md  Cargo.toml  README.md
server/data/positions/: default_french_defense.json  default_italian_game.json  default_kings_indian_defense.json  default_lucena_position.json  default_scholars_mate_setup.json  default_sicilian_defense.json  default_standard_starting_position.json
server/defaults/positions/: default_philidors_legacy_mate_in_3.json  default_queens_gambit.json  default_ruy_lopez.json
server/migrations/: 001_initial_schema.sql  002_add_tactical_tag_columns.sql  003_drop_legacy_tactical_columns.sql
server/src/: config.rs  main.rs  persistence.rs  service.rs  session.rs
server/src/persistence/: finished_game_store.rs  json_store.rs  mod.rs  position_store.rs  session_store.rs  traits.rs
server/src/persistence/sqlite/: advanced_repo.rs  database.rs  finished_game_repo.rs  helpers.rs  integration_tests.rs  migrate_json.rs  mod.rs  position_repo.rs  review_repo.rs  session_repo.rs
server/src/review/: mod.rs  store.rs  types.rs  worker.rs
server/src/review/advanced/: cache.rs  compute.rs  mod.rs  store.rs
server/src/service/: converters.rs  mod.rs  parsers.rs
server/src/service/endpoints/: engine.rs  events.rs  game.rs  mod.rs  persistence.rs  positions.rs  review.rs  session.rs
server/src/session/: actor.rs  commands.rs  events.rs  handle.rs  mod.rs  snapshot.rs  state.rs
src/: main.rs
src/app/: mod.rs  state.rs
src/chess/: game.rs  mod.rs
src/chess/pgn/: mod.rs  san.rs  writer.rs
src/engine/: mod.rs  stockfish.rs
src/engine/uci/: mod.rs  parser.rs
src/ui/: app.rs  format.rs  mod.rs
src/ui/widgets/: board.rs  controls_panel.rs  fen_dialog.rs  game_info_panel.rs  menu.rs  mod.rs  move_history_panel.rs  promotion_dialog.rs  uci_debug_panel.rs
