[package]
name = "chesstty"
version = "0.1.0"
edition = "2021"

[dependencies]
# Chess core
cozy-chess = "0.3"

# TUI
ratatui = "0.28"
crossterm = "0.28"

# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

[dev-dependencies]
proptest = "1.4"
