[workspace]
resolver = "2"
members = [
    "chesstty",
    "server",
    "chess-client",
    "client-tui",
    "chess",
    "engine",
    "analysis",
]

[workspace.package]
version = "0.1.2"

[workspace.dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1.41", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync", "net"] }

# gRPC and Protocol Buffers
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

# Error handling
thiserror = "2.0"
anyhow = "1.0"
tempfile = "3.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Chess core
cozy-chess = "0.3"

# TUI
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
smallvec = "1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
enum_glob_use = "deny"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
