[package]
name = "chess-client"
version = "0.1.0"
edition = "2021"

[features]
default = []
mock = []

[dependencies]
chess-proto = { path = "../proto" }
tonic = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
