[package]
name = "chesstty"
version.workspace = true
edition = "2021"

[[bin]]
name = "chesstty"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
libc = "0.2"
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "net"] }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
