[package]
name = "chesstty-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chesstty-tui"
path = "src/main.rs"

[features]
default = []
mock = ["chess-client/mock"]

[dependencies]
chess-client = { path = "../chess-client" }
chess = { path = "../chess" }

tokio = { workspace = true }
tonic = { workspace = true }
futures = "0.3"

statig = { version = "0.4", features = ["async"] }

ratatui = { workspace = true }
crossterm = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

cozy-chess = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
dirs = "6"

# For connection management
tower = "0.5"
hyper = "1.5"
hyper-util = { version = "0.1", features = ["tokio"] }

[dev-dependencies]
tempfile = "3"
