[package]
name = "chesstty-server"
version.workspace = true
edition = "2021"
repository = "https://github.com/benediktms/chesstty"

[[bin]]
name = "chesstty-server"
path = "src/main.rs"

[dependencies]
chess-proto = { path = "../proto" }
chess = { path = "../chess" }
engine = { path = "../engine" }
analysis = { path = "../analysis" }

tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

# For async streaming
async-stream = "0.3"
cozy-chess = { workspace = true }
directories = "6"

serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }

[dev-dependencies]
tempfile = "3"
